--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,5 +59,6 @@ jobs:
 
       - name: Deploy to Minikube
         run: |
+          kubectl apply -f kubernetes/secret.yaml
           kubectl apply -f kubernetes/deployment.yaml
           kubectl apply -f kubernetes/service.yaml
