--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.9.1
 Django==5.2.5
+django-js-asset==3.1.2
+django-mptt==0.17.0
 djangorestframework==3.16.1
 psycopg2-binary==2.9.10
 python-decouple==3.8
