--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+africastalking==1.2.9
 asgiref==3.9.1
 certifi==2025.8.3
 cffi==1.17.1
@@ -19,6 +20,7 @@ python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.4
+schema==0.7.7
 sqlparse==0.5.3
 uritemplate==4.2.0
 urllib3==2.5.0
