--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,16 @@ djangorestframework==3.16.1
 drf-yasg==1.21.10
 idna==3.10
 inflection==0.5.1
+iniconfig==2.1.0
 josepy==2.1.0
 mozilla-django-oidc==4.0.1
 packaging==25.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pycparser==2.22
+Pygments==2.19.2
+pytest==8.4.1
+pytest-django==4.11.1
 python-decouple==3.8
 pytz==2025.2
 PyYAML==6.0.2
