--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,6 +37,7 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         env:
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }} 
           AFRICASTALKING_USERNAME: testuser
           AFRICASTALKING_API_KEY: testkey
