--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   test:
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12' 
+          python-version: '3.12'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,11 +38,23 @@ jobs:
       - name: Run tests
         env:
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }} 
-          AFRICASTALKING_USERNAME: testuser
-          AFRICASTALKING_API_KEY: testkey
-          EMAIL_HOST_USER: test@example.com
-          EMAIL_HOST_PASSWORD: testpass
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DB_NAME: testdb
+          DB_USER: testuser
+          DB_PASSWORD: testpass
+          DB_HOST: localhost
+          DB_PORT: 5432
+          OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
+          OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
+          OIDC_AUTH_ENDPOINT: ${{ secrets.OIDC_AUTH_ENDPOINT }}
+          OIDC_TOKEN_ENDPOINT: ${{ secrets.OIDC_TOKEN_ENDPOINT }}
+          OIDC_USER_ENDPOINT: ${{ secrets.OIDC_USER_ENDPOINT }}
+          OIDC_JWKS_ENDPOINT: ${{ secrets.OIDC_JWKS_ENDPOINT }}
+          OIDC_OP_LOGOUT_ENDPOINT: ${{ secrets.OIDC_OP_LOGOUT_ENDPOINT }}
+          AFRICASTALKING_USERNAME: ${{ secrets.AFRICASTALKING_USERNAME }}
+          AFRICASTALKING_API_KEY: ${{ secrets.AFRICASTALKING_API_KEY }}
+          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+          EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
         run: pytest --cov=customers --cov=categories --cov=products --cov=orders --cov-report=xml
       - name: Upload coverage
         uses: codecov/codecov-action@v4
