--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
 cryptography==45.0.6
+dj-database-url==3.0.1
 Django==5.2.5
 django-js-asset==3.1.2
 django-mptt==0.17.0
