--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,8 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         env:
-          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DB_NAME: testdb
           DB_USER: testuser
