--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,6 @@ jobs:
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: ${{ secrets.DEBUG }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DB_NAME: testdb
           DB_USER: testuser
           DB_PASSWORD: testpass
@@ -56,14 +55,14 @@ jobs:
           AFRICASTALKING_API_KEY: ${{ secrets.AFRICASTALKING_API_KEY }}
           EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
           EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
-        run: pytest
+        run: pytest --cov=customers --cov=categories --cov=products --cov=orders --cov-report=xml
       - name: Upload coverage
         uses: codecov/codecov-action@v4
 
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' 
     steps:
       - uses: actions/checkout@v4
       - name: Log in to Docker Hub
@@ -82,3 +81,9 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/groceries:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Debug Docker push
+        run: |
+          echo "Listing Docker images"
+          docker images
+          echo "Attempting manual push"
+          docker push ${{ secrets.DOCKER_USERNAME }}/groceries:latest
