--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    image: ${DOCKER_USERNAME}/groceries:latest
+    image: ${DOCKER_USERNAME}/isaac_repo:latest
     ports:
       - "8000:8000"
     env_file:
