--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   web:
-    image: ${DOCKER_USERNAME}/isaac_repo:latest
+    image: ${DOCKER_USERNAME}/groceries:latest
     ports:
       - "8000:8000"
     env_file:
@@ -9,7 +9,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:14
+    image: postgres:13
     environment:
       POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USER}
